# restful-app-python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
app/: database.py  main.py  models.py  utils.py
src/: database.py  main.py  utils.py
tests/: test_main.py
