[tool.poetry]
name = "restful-app-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.7"}
sqlmodel = "^0.0.22"
psycopg2-binary = "^2.9.10"
pre-commit = "^4.1.0"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
flake8 = "7.0.0"
black = "24.4.2"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
